--- a/index.ipynb
+++ b/index.ipynb
@@ -2059,7 +2059,7 @@
    "source": [
     "area_values = list(cities)[0:3]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['City'],cities[1]['City'],cities[2]['City']], 'y': [cities[0]['Area'],cities[1]['Area'],cities[2]['Area']], 'text': [area_values])}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [cities[0]['City'],cities[1]['City'],cities[2]['City']], 'y': [cities[0]['Population'],cities[1]['Area'],cities[2]['Area']], 'text': [area_values])}                               "
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [cities[0]['City'],cities[1]['City'],cities[2]['City']], 'y': [cities[0]['Population'],cities[1]['Population'],cities[2]['Population']], 'text': [area_values])}                               "
    ]
   },
   {
