--- a/index.ipynb
+++ b/index.ipynb
@@ -2044,15 +2044,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-78a6da46ac17>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-14-8b48f20e0fd5>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-78a6da46ac17>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['City'],cities[1]['City'],cities[2]['City']], 'y': [cities[0]['Area'],cities[1]['Area'],cities[2]['Area']], 'text': [area_values])\u001b[0m\n\u001b[0m                                                                                                                                                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-8b48f20e0fd5>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['City'],cities[1]['City'],cities[2]['City']], 'y': [cities[0]['Area'],cities[1]['Area'],cities[2]['Area']], 'text': [area_values])}\u001b[0m\n\u001b[0m                                                                                                                                                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
